--- a/server/Gemfile
+++ b/server/Gemfile
@@ -44,6 +44,8 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'rspec-rails', '~> 3.8.0'
+  gem 'rubocop-rspec'
+  gem 'rubocop-rails'
 end
 
 group :development do
@@ -52,7 +54,6 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
-  gem 'rubocop-rspec'
 
   # Mina is our deployment tool
   gem 'mina', '~> 1.2.3'
