--- a/server/Gemfile
+++ b/server/Gemfile
@@ -19,7 +19,7 @@ gem 'jbuilder', '~> 2.7'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
-gem 'bcrypt', '~> 3.1.7'
+# gem 'bcrypt', '~> 3.1.7'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
@@ -38,6 +38,9 @@ gem 'pg_search', '~> 2.3.0'
 
 # allows soft-deleting database rows
 gem 'discard', '~> 1.1.0'
+
+# handles authentication
+gem 'devise_token_auth', '~> 1.1.3'
 
 group :development, :test do
   gem 'awesome_print', '~> 1.8.0'
