Added jest tests.

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,4 +1,9 @@
 {
-  "presets": ["env"],
-  "plugins": ["transform-object-rest-spread"]
+  "presets": [["env", { "modules": false }]],
+  "env": {
+    "test": {
+      "presets": [["env", { "targets": { "node": "current" } }]]
+    }
+  },
+  "plugins": ["@babel/plugin-proposal-object-rest-spread"]
 }
