--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,9 @@
   "author": "Devin Leonhart",
   "private": true,
   "scripts": {
-    "serve": "./node_modules/.bin/webpack-dev-server --open --config webpack.dev.js",
-    "build": "rm -rf ./dist && ./node_modules/.bin/webpack --config webpack.prod.js && cp index.html ./dist && cp -r ./static ./dist"
+    "serve": "npx webpack-dev-server --open --config webpack.dev.js",
+    "build": "rm -rf ./dist && npx webpack --config webpack.prod.js && cp index.html ./dist && cp -r ./static ./dist",
+    "test": "npx jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.20",
@@ -25,19 +26,25 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.6.3",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.2.1",
     "eslint-plugin-vue": "^5.2.3",
+    "jsdom": "^15.2.0",
     "node-sass": "^4.12.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^7.1.0",
+    "vue-jest": "^3.0.5",
     "vue-loader": "^15.7.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
