--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ server-tests:
   stage: test
   variables:
     POSTGRES_DB: black_book_test
-    POSTGRES_USER: black_book
+    POSTGRES_USER: blackbook
     POSTGRES_PASSWORD: ""
     DATABASE_URL: 'postgresql://black_book:@postgres/black_book_test'
     RAILS_ENV: test
