Fix a number of incorrect tests and update test style

--- a/server/.rubocop.yml
+++ b/server/.rubocop.yml
@@ -22,6 +22,18 @@ Layout/IndentFirstArrayElement:
 Layout/CaseIndentation:
   EnforcedStyle: end
 
+# I'd like to turn this cop on, but I can't find a way to write the following
+# rspec test code in a way that satisfies this cop, the cop that requires
+# multiline blocks to use do...end instead of {}, and the line length cop
+# without also being hideously ugly:
+#
+# expect { subject }.not_to change {
+#   long_condition_that_exceeds_line_length
+# }
+#
+Lint/AmbiguousBlockAssociation:
+  Enabled: false
+
 Naming/RescuedExceptionsVariableName:
   PreferredName: error
 
