--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.20",
     "@fortawesome/free-solid-svg-icons": "^5.10.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "axios": "^0.19.0",
     "buefy": "^0.8.6",
     "fuzzy-dice": "^2.0.0",
     "sanitize-html": "^1.20.1",
@@ -22,7 +23,6 @@
     "tiptap-extensions": "^1.26.0",
     "vue": "^2.6.10",
     "vue-localstorage": "^0.6.2",
-    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.7",
     "vuex": "^3.1.1"
   },
