--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,9 +1,8 @@
 {
-  "presets": [["env", { "modules": false }]],
+  "presets": [["@babel/env", { "modules": false }]],
   "env": {
     "test": {
-      "presets": [["env", { "targets": { "node": "current" } }]]
+      "presets": [["@babel/env", { "targets": { "node": "current" } }]]
     }
-  },
-  "plugins": ["@babel/plugin-proposal-object-rest-spread"]
+  }
 }
