--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "dependencies": {
-    "@rails/activestorage": "^6.1.1",
-    "@rails/ujs": "^6.1.1",
-    "@rails/webpacker": "^6.0.0-beta.4",
-    "bootstrap": "^4.6.0",
-    "css-loader": "^5.0.1",
+    "@rails/actiontext": "^6.1.2-1",
+    "@rails/activestorage": "^6.1.3",
+    "@rails/ujs": "^6.1.3",
+    "@rails/webpacker": "^6.0.0-beta.5",
+    "bootstrap": "^5.0.0-beta2",
+    "bootstrap-icons": "^1.3.0",
+    "css-loader": "^5.0.2",
     "jquery": "^3.5.1",
-    "mini-css-extract-plugin": "^1.3.5",
+    "mini-css-extract-plugin": "^1.3.8",
     "popper.js": "^1.16.1",
-    "sass": "^1.32.6",
-    "sass-loader": "^10.1.1",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "stimulus": "^2.0.0",
     "style-loader": "^2.0.0",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0"
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0"
   },
   "devDependencies": {
     "@webpack-cli/serve": "^1.3.0",
