--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "@popperjs/core": "^2.8.4",
     "@rails/actiontext": "^6.1.2-1",
     "@rails/activestorage": "^6.1.3",
     "@rails/ujs": "^6.1.3",
-    "@rails/webpacker": "^6.0.0-beta.5",
+    "@rails/webpacker": "5.2.1",
     "bootstrap": "^5.0.0-beta2",
     "bootstrap-icons": "^1.3.0",
     "css-loader": "^5.0.2",
@@ -27,8 +28,5 @@
     "presets": [
       "./node_modules/@rails/webpacker/package/babel/preset.js"
     ]
-  },
-  "browserslist": [
-    "defaults"
-  ]
+  }
 }
