--- a/package.json
+++ b/package.json
@@ -1,31 +1,20 @@
 {
+  "name": "blackbook",
+  "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.8.4",
-    "@rails/actiontext": "^6.1.2-1",
-    "@rails/activestorage": "^6.1.3",
-    "@rails/ujs": "^6.1.3",
-    "@rails/webpacker": "^6.0.0-beta.5",
+    "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.1.3",
+    "@rails/activestorage": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "5.2.1",
     "bootstrap": "^5.0.0-beta2",
-    "css-loader": "^5.0.2",
-    "mini-css-extract-plugin": "^1.3.8",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "trix": "^1.2.0",
-    "turbolinks": "^5.2.0",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0"
+    "bootstrap-icons": "^1.4.0",
+    "jquery": "^3.5.1",
+    "trix": "^1.3.1",
+    "turbolinks": "^5.2.0"
   },
+  "version": "0.1.0",
   "devDependencies": {
-    "@webpack-cli/serve": "^1.3.0",
     "webpack-dev-server": "^3.11.2"
-  },
-  "babel": {
-    "presets": [
-      "./node_modules/@rails/webpacker/package/babel/preset.js"
-    ]
-  },
-  "browserslist": [
-    "defaults"
-  ]
+  }
 }
