--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "blackbook",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/actiontext": "^6.1.3",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
+    "@rails/actioncable": "*",
+    "@rails/actiontext": "*",
+    "@rails/activestorage": "*",
+    "@rails/ujs": "*",
     "@rails/webpacker": "5.4.0",
-    "bootstrap": "^5.0.0-beta2",
-    "bootstrap-icons": "^1.4.0",
-    "jquery": "^3.5.1",
-    "trix": "^1.3.1",
-    "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "bootstrap": "*",
+    "bootstrap-icons": "*",
+    "jquery": "*",
+    "trix": "*",
+    "turbolinks": "*",
+    "webpack": "*",
+    "webpack-cli": "*"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "*"
   }
 }
