--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "jquery": "*",
     "trix": "*",
     "turbolinks": "*",
-    "webpack": "*",
-    "webpack-cli": "*"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "*"
+    "webpack-dev-server": "^3.11.2"
   }
 }
