--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM ruby:3.0.2-alpine
+FROM ruby:3.0.1-alpine
 
 #  Docker-specific Environment Variables
 ENV APP_PATH /var/app
@@ -9,8 +9,9 @@ ENV RAILS_LOG_TO_STDOUT true
 ENV RAILS_PORT 3000
 
 # Copy Entrypoint scripts and make them executable.
-COPY ./prod-entrypoint.sh /usr/local/bin/dev-entrypoint.sh
-RUN chmod +x /usr/local/bin/prod-entrypoint.sh
+COPY ./entrypoints/dev.sh /usr/local/bin/dev-entrypoint.sh
+COPY ./entrypoints/test.sh /usr/local/bin/test-entrypoint.sh
+RUN chmod +x /usr/local/bin/dev-entrypoint.sh && chmod +x /usr/local/bin/test-entrypoint.sh
 
 # Install Depencenices
 RUN apk -U add --no-cache \
