--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,21 @@
+# No configuration will be srtored here.
+# Use only .env files.
+
 default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: <%= ENV['DATABASE_HOST'] %>
+  port: <%= ENV['DATABASE_PORT'] %>
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
 
 production:
   <<: *default
-  host: db
-  database: blackbook_production
-  username: postgres
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 development:
   <<: *default
-  database: blackbook_development
 
 test:
   <<: *default
-  database: blackbook_test
