--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 
 services:
 
-  blackbook_redis:
-    container_name: blackbook_reddis
+  redis:
+    container_name: redis
     image: redis:4.0-alpine
     volumes:
       - shared_data:/var/shared/redis
@@ -12,8 +12,8 @@ services:
       - blackbook_test
     command: redis-server
 
-  blackbook_db:
-    container_name: blackbook_db
+  postgres_db:
+    container_name: postgres_db
     image: postgres:12.5-alpine
     volumes:
       - db_data:/var/lib/postgresql/data
@@ -30,7 +30,7 @@ services:
   blackbook_app:
     container_name: blackbook_app
     depends_on:
-      - blackbook_db
+      - postgres_db
     build:
       context: .
       dockerfile: Dockerfile.dev
@@ -51,7 +51,7 @@ services:
   blackbook_test:
     container_name: blackbook_test
     depends_on:
-      - blackbook_db
+      - postgres_db
     image: blackbook_blackbook_app
     env_file: ./environments/.env.test
     volumes:
