Activate S3 as primary.

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -17,6 +17,6 @@ digitalocean:
 
 production:
   service: Mirror
-  primary: local
+  primary: digitalocean
   mirrors:
-    - digitalocean
+    - local
