--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,7 +6,7 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-production:
+digitalocean:
   service: S3
   endpoint: <%= Rails.application.credentials.dig(:digitalocean, :endpoint) %>
   access_key_id: <%= Rails.application.credentials.dig(:digitalocean, :access_key_id) %>
