--- a/config/database.yml
+++ b/config/database.yml
@@ -12,21 +12,8 @@ production:
   <<: *default
 
 development:
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-  host: 127.0.0.1
-  port: 5432
-  database: blackbook_development
-  username: blackbook
-  password: password
+  <<: *default
 
 test:
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-  host: 127.0.0.1
-  port: 5432
+  <<: *default
   database: blackbook_test
-  username: blackbook
-  password: password
