--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - .:/app
       - shared_data:/var/shared
       - gem_cache:/usr/local/bundle/gems
+      - ./storage:/var/app/storage
     networks:
       - blackbook_network
     tty: true
