--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 
 /public/assets
 
+# Test coverage (SimpleCov)
+/coverage/
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
