--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
       target: dev
+    entrypoint: []
     environment:
       - NODE_ENV=development
       - RAILS_ENV=development
